feat: 친구 목록 기능, 친구 삭제 기능 구현